veecle-os-runtime-macros/tests/ui/actor/private_actor.stderr
error[E0603]: struct `MacroTestActor` is private
  --> tests/ui/actor/private_actor.rs:12:25
   |
12 |     let _: self::inner::MacroTestActor;
   |                         ^^^^^^^^^^^^^^ private struct
   |
note: the struct `MacroTestActor` is defined here
  --> tests/ui/actor/private_actor.rs:5:5
   |
 5 |     #[veecle_os_runtime_macros::actor]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `veecle_os_runtime_macros::actor` (in Nightly builds, run with -Z macro-backtrace for more info)
